tests/trybuild/entity/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/entity/comma_alone.rs:4:26
  |
4 |     let entity = entity!(,);
  |                          ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$component:expr`
 --> src/entity/mod.rs
  |
  |     ($component:expr $(,$components:expr)* $(,)?) => {
  |      ^^^^^^^^^^^^^^^
